--- a/uprak1.html
+++ b/uprak1.html
@@ -134,7 +134,7 @@
                 <table>
 
                     <tr>
-                        <td><img style="width: 100px;" src="Gambar/igasar-removebg-preview.png"></td>
+                        <td><img style="width: 100px;" src="igasar-removebg-preview.png"></td>
                         <td colspan="2">
                             <h2>Travel Igasar Pindad Bandung</h2>
                         </td>
