--- a/uprak1.html
+++ b/uprak1.html
@@ -226,7 +226,7 @@
         <center>
             <table>
                 <tr>
-                    <th><img style="width: 100px;" src="Gambar/igasar-removebg-preview.png"></th>
+                    <th><img style="width: 100px;" src="igasar-removebg-preview.png"></th>
                     <th colspan="2">Bukti Pembayaran</th>
                 </tr>
                 <tr>
