--- a/uprak2.html
+++ b/uprak2.html
@@ -47,7 +47,7 @@ document.fform.Ket.value = ket;
         <form name="fform">
     <table border="1">
         <tr>
-            <td rowspan="3"><img style="width: 100px;" src="Gambar/igasar-removebg-preview.png" alt="IGASAR"></td>
+            <td rowspan="3"><img style="width: 100px;" src="igasar-removebg-preview.png" alt="IGASAR"></td>
         </tr>
         <tr>
             <td colspan="3"><h2>Menghitung Indeks Prestasi Siswa</h2></td>
